--- a/src/screens/base/Base.css
+++ b/src/screens/base/Base.css
@@ -1,3 +1,18 @@
+.fade-in {
+    animation: fade-in 3s;
+  }
+  
+  @keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 100;
+    }
+  }
+
+
+
 .base-wrapper {
     background-color: white;
 }
@@ -12,10 +27,18 @@ th, td {
 }
 
 .base-column-one {
-    width: 0%;
+    position: sticky;
+    background-color: #ffffff; /* Change to your background color */
+    z-index: 1;
 }
 
 .base-column-two {
     width: 100%;
     padding: 10px;
+    overflow: auto;
+}
+
+.scrollable-wrapper {
+    min-width: 100%; /* Ensure the wrapper fills the available width */
+    display: inline-block; /* Ensure the wrapper doesn't expand unnecessarily */
 }
