--- a/src/screens/dashboard/DashBoard.css
+++ b/src/screens/dashboard/DashBoard.css
@@ -1,14 +1,203 @@
-
 .fade-in {
-    animation: fade-in 3s;
-  }
-  
-  @keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 100;
-    }
+  animation: fade-in 3s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
   }
 
+  to {
+    opacity: 100;
+  }
+}
+
+.top-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.pills-heading {
+  display: flex;
+  height: 80px;
+}
+
+.total-pills {
+  background-color: #5b92ff73;
+  border-radius: 40px;
+  height: 60px;
+  width: 60px;
+}
+
+.total-pills-image {
+  padding: 15px;
+  width: 25px;
+}
+
+.pills-count {
+  font-size: 16px;
+  padding-left: 2px;
+  font-family: 'Poppins', sans-serif;
+}
+
+.pills-title {
+  margin-top: -10px;
+  font-size: 12px;
+  padding-left: 2px;
+  font-family: "Nunito";
+}
+
+.info-div {
+  margin-top: -10px;
+  margin-left: 20px;
+}
+
+.mrng-pills {
+  background-color: #fddb86;
+  border-radius: 40px;
+  height: 60px;
+  width: 60px;
+}
+
+
+.after-pills {
+  background-color: #e7673075;
+  border-radius: 40px;
+  height: 60px;
+  width: 60px;
+}
+
+.night-pills {
+  background-color: #615bff5a;
+  border-radius: 40px;
+  height: 60px;
+  width: 60px;
+}
+
+.main-div-dashbaord {
+  height: 97.5vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.dashboard-grid-container {
+  display: grid;
+  height: 400px;
+  padding: 0;
+  margin: 0;
+  margin-top: 20px;
+  grid-template-columns: 30% 70%;
+  overflow: hidden;
+}
+
+
+.dashboard-left-view {
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-right: 7px;
+  border: 1px solid #F2F2F2;
+}
+
+.dashboard-right-view {
+  border-radius: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  margin-right: 7px;
+  border: 1px solid #F2F2F2;
+}
+
+.progress-title {
+  font-family: 'Poppins', sans-serif;
+
+}
+
+.progress-bar-size {
+  width: 100%;
+  height: 100%;
+}
+
+.CircularProgressbar-text {
+  font-family: "Nunito";
+}
+
+
+.dashboard-progress-grid-container {
+  display: grid;
+  height: 30px;
+  padding: 0;
+  margin: 0;
+  grid-template-columns: 75% 25%;
+  overflow: hidden;
+}
+
+.circular-green {
+  width: 20px;
+  margin-right: 10px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+
+.light-green {
+  background-color: #DFEEDB;
+}
+
+.dark-green {
+  background-color: #A6D997;
+}
+
+.progress-grid-inner {
+  display: flex;
+  height: 0px;
+  background-color: red;
+}
+
+.circular-green-title {
+  margin-top: -8px;
+  margin-left: 5px;
+  font-family: 'Poppins', sans-serif;
+  font-size: 25px;
+}
+
+
+.dashboard-text-grid-container {
+  display: grid;
+  height: 40px;
+  padding: 0;
+  margin-left: 0;
+  grid-template-columns: 75% 25%;
+  overflow: hidden;
+}
+
+.dashboard-progress-text {
+  font-size: 10px;
+  font-family: "Nunito";
+}
+
+
+.table-height{
+  height: 300px;
+}
+
+
+.small-font {
+  font-size: 6px;
+}
+
+
+.pill-th-dashboard {
+  width: calc(100% / 5  );
+  text-align: left;
+  padding-bottom: 15px;
+  border-bottom: 0.1px solid rgba(183, 183, 183, 0.496);
+}
+
+
+.doctor-appointment {
+  margin-top: 10px;
+  flex: 1;
+  margin-bottom: 10px;
+}
