--- a/src/screens/settings/Setting.css
+++ b/src/screens/settings/Setting.css
@@ -1,14 +1,77 @@
-
 .fade-in {
-    animation: fade-in 3s;
-  }
-  
-  @keyframes fade-in {
-    from {
-      opacity: 0;
-    }
-    to {
-      opacity: 100;
-    }
+  animation: fade-in 3s;
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
   }
 
+  to {
+    opacity: 100;
+  }
+}
+
+.root-settings {
+  display: flex;
+  width: 100%;
+  height: 97.5vh;
+}
+
+.settings-grid-container {
+  display: grid;
+  height: calc(45vh);
+  padding: 0;
+  width: 100%;
+  margin: 0;
+  grid-template-columns: 33% 33% 33%;
+  overflow: hidden;
+}
+
+.settings-view-outer {
+  border-radius: 10px;
+  padding-left: 20px;
+  margin-right: 7px;
+  border: 1px solid #F2F2F2;
+}
+
+.hide {
+  display: none;
+}
+
+.app-download {
+  width: 100%;
+}
+
+.settings-title {
+  font-family: 'Poppins', sans-serif;
+  font-size: 17px;
+}
+
+.mobile-client {
+  margin-top: 10px;
+  display: flex;
+  padding: 0;
+  margin: 0;
+  margin-top: 30px;
+}
+
+.mobile-cleint-text {
+  padding: 0;
+  font-size: 12px;
+  padding-left: 7px;
+  margin-top: 0px;
+  font-family: "Nunito";
+}
+
+.qr-logo {
+  margin-top: 20px;
+  width: 40%;
+}
+
+.just-scan {
+  margin: 0;
+  padding: 0;
+  font-family: "Nunito";
+  font-size: 10px;
+}
