--- a/src/component/inputbox/InputBox.css
+++ b/src/component/inputbox/InputBox.css
@@ -1,7 +1,7 @@
 .input-box-container {
     border: 1px solid #BDBDBD;
-    width: 500px;
     border-radius: 8px;
+    margin-right: 10px;
     box-shadow: 3px 3px 10px 6px rgb(0, 0, 0,0,06);
     color: #333;
 }
@@ -31,7 +31,7 @@
     padding: 5px;
 }
 .input-area-height {
-    height: 100px;
+    
     resize: none;      /* Disable resizing */
 }
 .input-text-style::placeholder {
