--- a/src/screens/settings/Setting.css
+++ b/src/screens/settings/Setting.css
@@ -77,8 +77,10 @@
   padding-right: 10px;
 }
 
-.sample{
- height: 100%;
+.settings-flex-div{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .text-button {
