--- a/src/component/inputbox/InputBox.css
+++ b/src/component/inputbox/InputBox.css
@@ -1,11 +1,13 @@
 .input-box-container {
     border: 1px solid #BDBDBD;
     border-radius: 8px;
+    flex-grow: 1;
     margin-right: 10px;
     box-shadow: 3px 3px 10px 6px rgb(0, 0, 0,0,06);
     color: #333;
 }
 .input-text-style {
+    flex-grow: 1;
     border: none;         /* Remove border */
     padding: 10px;           /* Remove padding */
     margin: 0;            /* Remove margin */
@@ -28,12 +30,24 @@
 }
 .input-container {
     margin-top: 2px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     padding: 5px;
 }
 .input-area-height {
-    
+    flex-grow: 1;
     resize: none;      /* Disable resizing */
 }
 .input-text-style::placeholder {
     color: rgba(173, 173, 173, 0.467); /* Set placeholder color */
+  }
+
+  .textbox-container{
+    margin-top: 2px;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    height: 100%;
   }
