--- a/src/screens/dashboard/DashBoard.css
+++ b/src/screens/dashboard/DashBoard.css
@@ -68,7 +68,7 @@
 }
 .dashboard-grid-container {
   display: grid;
-  height: 400px;
+  height: 45%;
   padding: 0;
   margin: 0;
   margin-top: 20px;
